file content vue component making

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "axios": "^0.18.0",
     "chai": "^4.2.0",
     "lint-staged": "^7.3.0",
+    "materialize-css": "^1.0.0-rc.2",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.2",
     "vue-template-compiler": "^2.5.21",
     "vue-virtual-table": "^0.2.7",
